--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ const token = ''
 
 module.exports = {
     token,
-    apiUrl: `https://api.telegram.org/bots${token}`,
+    apiUrl: `https://api.telegram.org/bot${token}`,
     apiFileUrl: `https://api.telegram.org/file/bot${token}`
 }
